# marrow

./: .bazelrc  .env.ci  .env.x  .gitignore  BUILD.bazel  MODULE.bazel  bookworm.yaml  main.rs
.github/workflows/: bazel.yaml  build.yaml  terraform.yaml
patches/: BUILD.bazel  faiss_sys.patch  gcp_bigquery_client.patch  lru.patch  risingwave_cmd.patch  risingwave_cmd_all.patch  risingwave_common.patch  risingwave_connector.patch  risingwave_connector_codec.patch  risingwave_frontend.patch  risingwave_license.patch  risingwave_meta.patch  risingwave_meta_model.patch  risingwave_object_store.patch  risingwave_pb.patch  risingwave_proto_expr.patch  rules_oci.patch  rules_rust.patch
platform/: BUILD.bazel
risingwave/: BUILD.bazel  Cargo.toml  glibc_test.rs  tonic_build_prod.rs
risingwave/kernel/: BUILD.bazel  README.md  add_one.rs
risingwave/kernels/: BUILD.bazel  README.md
risingwave/src/: lib.rs
terraform/: .gitignore  .terraform.lock.hcl  README.md  cluster.tf  iam.tf  main.tf  provider.tf  storage.tf  variables.tf
terraform/deployment/: .gitignore  glibc_test.tf  risingwave_compactor.tf  risingwave_compute.tf  risingwave_config.tf  risingwave_frontend.tf  risingwave_glibc_test.tf  risingwave_meta.tf  variables.tf
tools/: BUILD.bazel  preset.bazelrc
