exports_files([
  "gcp_bigquery_client.patch",
  "lru.patch",
  "risingwave_cmd.patch",
  "risingwave_cmd_all.patch",
  "risingwave_common.patch",
  "risingwave_connector.patch",
  "risingwave_connector_codec.patch",
  "risingwave_frontend.patch",
  "risingwave_meta.patch",
  "risingwave_meta_model.patch",
  "risingwave_object_store.patch",
  "risingwave_pb.patch",
  "risingwave_proto_expr.patch",
  "rules_oci.patch",
  "rules_rust.patch",
])
