[package]
name = "risingwave"
edition = "2024"
[dependencies]
anyhow = "1.0.100"
linkme = "0.3.35"
risingwave_common = { git = "https://github.com/risingwavelabs/risingwave.git", tag = "v2.6.0" }
risingwave_cmd_all = { git = "https://github.com/risingwavelabs/risingwave.git", tag = "v2.6.0" }
risingwave_pb = { git = "https://github.com/risingwavelabs/risingwave.git", tag = "v2.6.0" }
risingwave_expr = { git = "https://github.com/risingwavelabs/risingwave.git", tag = "v2.6.0" }
# Using crate.annotation in MODULE.bazel to toggle on sqlx-sqlite for sea-orm-migration does not impact its dependency resolution
# See more at https://github.com/bazelbuild/rules_rust/issues/3626
# So the sea-schema as dependency of sea-orm-migration does not have its sqlx-sqlite feature enabled
# Turn it on here since features are additive across the lockfile to influence the flag to be on
sea-schema = { version = "0.16.2", features = ["sqlx-sqlite"] }
tonic-build = { version = "0.12.3", features = ["prost"] }
[patch.crates-io]
# https://github.com/risingwavelabs/risingwave/blob/f07678212a8f5ffeaab0453db4b321720cadff42/Cargo.toml#L395
faiss = { git = "https://github.com/risingwavelabs/faiss-rs.git", rev = "f6f0acb" }
# Switch from gcp-bigquery-client 0.18.2 to 0.19.0 to avoid inconsistent hyper-rustls versions against yup-oauth2 dependency
gcp-bigquery-client = { git = "https://github.com/lquerel/gcp-bigquery-client.git", rev = "e545d6bb811b02ed8fce7633956109efec1b9181" }
# Sync bincode and bincode_derive to the same 2.0.0-rc.3
bincode_derive = { git = "https://git.sr.ht/~stygianentity/bincode", rev = "958b439c" }
# Bump sql-json-path down to 0.1.0 to maintain compatibility with jsonbb 0.1.4
sql-json-path = { git = "https://github.com/risingwavelabs/sql-json-path.git", rev = "3bc3a3439b65d4c002d50a6267a1977d48523b4d" }
# Bump gcloud-gax and gcloud-googleapis down to 1.1.0 so it is compatible with tonic 0.12.x that madsim-tonic targets
gcloud-gax = { git = "https://github.com/yoshidan/google-cloud-rust.git", rev = "37929509d68175b1d9c7b267315c373c5f1cf196" }
gcloud-googleapis = { git = "https://github.com/yoshidan/google-cloud-rust.git", rev = "2326ea89b6ec96cefa54d0406c6097164f6bd2b1" }
[patch."https://github.com/BugenZhao/thiserror.git"]
thiserror = "2.0.17"
